
	Added support of patterns to 'classify' option, so that files can now be
	decorated based on their names.  Thanks to elricbk.

	Added "filelist" parameter to :sync! that enables synchronization of
	custom view.  Thanks to filterfalse.

	Added 'cvoptions' option to control when entering/leaving custom views is
	considered to be equal to entering/leaving directories.  Thanks to
	filterfalse.

	Changed order of initialization to perform autocommands before startup
	commands on launch.

	Changed type of 'confirm' option.  Now it's a set that picks which
	operations should be confirmed.  Thanks to Losiara and mvucBmM0.

	Do not reset completion on terminal resize.

	Expand environment variables for :edit.  Thanks to filterfalse.

	Don't print just table header on `:cabbr something`, print message that no
	matches found instead.

	Display <c-h> as <bs> only at the beginning of key sequence.

	Better terminal buffer title for plugin in neovim.  Thanks to
	randomizedthinking.

	Enabled wildmenu for menus.

	Skip UTF-8 BOM for file preview.

	Allow suffixes and prefixes in 'classify' to be of up to eight characters
	in length.  Thanks to elricbk.

	Use original (before custom view) cursor position on :sync! in custom
	views.  Thanks to filterfalse.

	Fixed kind of a duplicate of first history element on =.

	Fixed displaying size for symbolic links to directories on changing views
	and determining whether they point to a directory in custom views.

	Fixed backward search in menus, which was performed in the opposite
	direction.

	Fixed hanging on sudden terminal loss.  Thanks to aleksejrs.

	Fixed crash on using extremely long function name.

	Fixed overwriting files after editing destination file name.  Thanks to
	rbong.

	Fixed querying file information on 64-bit Windows.  Thanks to santhoshr.

	Fixed crash on very long option value on :set.  Thanks to aleksejrs.

	Fixed displaying non-latin characters in LHS of mapping in map menus.
	Thanks to filterfalse.
