@@ -1,4 +1,4 @@
-.TH VIFM 1 "March 31, 2016" "vifm 0.8.1a"
+.TH VIFM 1 "April 03, 2016" "vifm 0.8.1a"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3664,6 +3664,7 @@ etc.):
    [+\-]size    \- size
    [+\-]nitems  \- number of items in a directory (zero for files)
    [+\-]groups  \- groups extracted via regexps from 'sortgroups'
+   [+\-]target  \- symbolic link target (empty for other file types)
    [+\-]atime   \- time accessed (e.g. read, executed)
    [+\-]ctime   \- time changed (changes in metadata, e.g. mode)
    [+\-]mtime   \- time modified (when file contents is changed)
