@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.8.1a  Last change: 2016 Mar 31
+*vifm-app.txt*    For Vifm version 0.8.1a  Last change: 2016 Apr 03
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -3059,6 +3059,7 @@ key, etc.):
    [+-]size    - size
    [+-]nitems  - number of items in a directory (zero for files)
    [+-]groups  - groups extracted via regexps from |vifm-'sortgroups'|
+   [+-]target  - symbolic link target (empty for other file types)
    [+-]atime   - time accessed (e.g. read, executed)
    [+-]ctime   - time changed (changes in metadata, e.g. mode)
    [+-]mtime   - time modified (when file contents is changed)
